--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,14 +24,7 @@
             },
             {
                 "command": "workbench.action.terminal.sendSequence",
-                "args": { "text": "cd frontend \n npm start\n" }
-            },
-            {
-                "command": "workbench.action.terminal.new" // Abre nueva terminal
-            },
-            {
-                "command": "workbench.action.terminal.sendSequence",
-                "args": { "text": "cd backend/gym \n venv/scripts/activate \n git pull \n py manage.py migrate \n py manage.py runserver\n" }
+                "args": { "text": "cd backend \n venv/scripts/activate \n git pull \n py manage.py migrate \n py manage.py runserver\n" }
             },
         ],
     },
